base de datos catalogo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </section>        
         </div>  
     </main>
+    <script src="js/catalogo.js"></script>
    <script type="module" src="js/main.js"></script>
 </body>
 </html>
